--- a/app/modules/projectManage/projectEdit/basicData/basicData.html
+++ b/app/modules/projectManage/projectEdit/basicData/basicData.html
@@ -1,5 +1,5 @@
-<div class="anim-slide-left basic--data--show--wrap" >
-    <md-toolbar class="md-menu-toolbar edit--project--manage--head-box">
+<div class="anim-slide-left basic--data--show--wrap" style="min-width: 600px;">
+    <div class="md-menu-toolbar edit--project--manage--head-box">
         <div class="md-toolbar-tools">
             <div class="md-icon-button edit--project--manage--head--btn">
                 <a ui-sref="infoArchives.projectManage" class="fa fa-angle-left"></a>
@@ -10,7 +10,7 @@
             <span> | </span>
             <span class="current--column" translate="MODULES_PROJECTMANAGE_PROJECT_BASIC_INFORMATION">项目基本信息</span>
         </div>
-    </md-toolbar>
+    </div>
     <div aria-label="Mango" class="edit--project--manage--wrapper">
         <md-progress-linear ng-show="vm.loading" md-mode="indeterminate"></md-progress-linear>
         <div class="">
