--- a/app/modules/batch/batch.html
+++ b/app/modules/batch/batch.html
@@ -61,7 +61,7 @@
             <div class="single--attribute--box time--frame">
                 <span class="let--middle--line"></span>
                 <div class="time--frame__box">
-                    <span class="attribute--title" translate="MODULES_BATCH_PACKAGE_AIU_START_DATE">起始时间</span>
+                    <span class="attribute--title" translate="MODULES_BATCH_CONVERSION_START_TIME">起始时间</span>
                     <div  layout="row" class="attribute--value">
                         <div class="input-group">
                             <input type="text" class="form-control" placeholder="{{'MODULES_BATCH_START_DATE'|translate}}"  uib-datepicker-popup ng-model="vm.parameter.start_date" is-open="popup2.opened" datepicker-options="dateOptions"  close-text="{{'MODULES_BATCH_CLOSE'|translate}}" />
@@ -89,7 +89,17 @@
             <md-button class="pull-left md-raised green--btn" ng-disabled="!vm.selectIsError" ng-click="vm.forceSwitch()" translate="MODULES_BATCH_FORCED_CONVERSION">强制转换</md-button>
             <md-button class="pull-left md-raised red--btn" ng-disabled="!vm.selectIsError" ng-click="vm.deleteBatch()" translate="MODULES_BATCH_DELETE_ABNORMAL_DATA">删除异常数据</md-button>
         </div>
-        <div  ng-if="gridOptions.data.length > 0 && !vm.loading" ui-grid="gridOptions" class="common--uigrid--height batch-grid "  ui-grid-auto-resize ui-grid-resize-columns   ui-grid-move-columns ui-grid-save-state  ui-grid-selection ui-grid-pagination ></div>
+        <div style="height: calc(100% - 57px)">
+            <div  ng-show="!vm.loading"
+                  ui-grid="gridOptions" class="common--uigrid--height batch-grid "
+                  ui-grid-auto-resize ui-grid-resize-columns
+                  ui-grid-move-columns ui-grid-save-state
+                  ui-grid-selection ui-grid-pagination
+                  ui-grid-pinning
+                    style="height: 98%;"
+            ></div>
+        </div>
+
         <div ng-show="vm.loading" class="loading" translate="MODULES_DATABASE_LOADING">正在加载...</div>
         <div ng-show="gridOptions.data.length == 0 && !vm.loading" class="batch--no--data">
             <!--<span class="fa fa-exclamation-circle"></span><span translate="MODULES_BATCH_DELETE_NO_DATA">没有数据</span>-->
