--- a/app/modules/connectMap/connectMap.html
+++ b/app/modules/connectMap/connectMap.html
@@ -49,58 +49,39 @@
             <ul class="status--info--box">
                 <li class="single--info"><span class="fa fa-circle fa-1"></span><span translate="PROJECT_CONNECTMAP_SIP_CONVERSION_SERVICE">SIP转换服务</span></li>
                 <li class="single--info"><span class="fa fa-circle"></span><span translate="PROJECT_CONNECTMAP_AIP_CONVERSION_SERVICE">AIP转换服务</span></li>
-                <li class="single--info active"><span class="fa fa-circle"></span><span translate="PROJECT_CONNECTMAP_SEARCH_SERVICE">搜索服务</span></li>
+                <!--<li class="single&#45;&#45;info active"><span class="fa fa-circle"></span><span translate="PROJECT_CONNECTMAP_SEARCH_SERVICE">搜索服务</span></li>-->
                 <li class="single--info"><span class="fa fa-circle"></span><span translate="PROJECT_CONNECTMAP_LOG_SERVICE">日志服务</span></li>
-                <li class="single--info active"><span class="fa fa-circle"></span>FTP</li>
+                <!--<li class="single&#45;&#45;info active"><span class="fa fa-circle"></span>FTP</li>-->
                 <li class="single--info"><span class="fa fa-circle"></span>ETL</li>
             </ul>
         </div>
-        <connect-map-tree nodes="data"></connect-map-tree>
-        <!--<div  ng-show="vm.tiptool.show" ng-style="{position:'absolute','left':vm.tiptool.y + 520,'top':vm.tiptool.x - 70}">-->
-            <!--<div class="tiptool&#45;&#45;show&#45;&#45;wrap">-->
-                <!--<table class="table tiptool&#45;&#45;show&#45;&#45;data&#45;&#45;table">-->
-                    <!--<thead>-->
-                    <!--<tr class="table__th&#45;&#45;tr">-->
-                        <!--<th>ID</th>-->
-                        <!--<th translate="MODULES_SERVICEWATCH_JOB_NAME">JOB名称</th>-->
-                        <!--<th translate="PROJECT_CONNECTMAP_CONSUME_SECONDS">耗时(秒)</th>-->
-                        <!--<th translate="MODULES_BATCH_STATE">状态</th>-->
-                    <!--</tr>-->
-                    <!--</thead>-->
-                    <!--<tbody>-->
-                    <!--<tr ng-repeat="detailInfo in vm.detailInfos">-->
-                        <!--<td>{{detailInfo.id}}</td>-->
-                        <!--<td>{{detailInfo.jobName}}</td>-->
-                        <!--<td>{{detailInfo.keepTime}}</td>-->
-                        <!--<td>{{detailInfo.progress}}%</td>-->
-                    <!--</tr>-->
-                    <!--</tbody>-->
-                <!--</table>-->
-                <!--<span class="org&#45;&#45;bot"></span>-->
-            <!--</div>-->
-        <!--</div>-->
-        <div ng-repeat="detailLists in vm.detailLists"  ng-style="{position:'absolute','left':detailLists.y,'top':detailLists.x}">
+        <div ng-show="vm.unitNum!=vm.completeNum" class="loading" translate="MODULES_DATABASE_LOADING">数据加载中...</div>
+        <connect-map-tree nodes="data" ng-show="vm.unitNum==vm.completeNum"></connect-map-tree>
+        <div ng-repeat="detailLists in vm.detailLists" class="connectMap-detail"  ng-style="{position:'absolute','left':detailLists.y,'top':detailLists.x}">
             <div class="tiptool--show--wrap" ng-show="detailLists.type=='dataBase'">
-                <div>
-                    <div><span>系统数据库类型:</span><span>{{detailLists.info}}</span></div>
-                    <div><span>接入方式:</span><span>ETL</span></div>
-                    <div><span>AIU存储路径:</span><span>fdfsfs</span></div>
-                    <div ng-click="vm.detailLists.splice($index,1)">关闭</div>
+                <div class="tiptool--show--data--table">
+                    <div class="attr--row"><span translate="PROJECT_CONNECTMAP_SYSTEM_DATABASE_TYPE">系统数据库类型</span>：<span>{{detailLists.info.database}}</span></div>
+                    <div class="attr--row"><span translate="PROJECT_CONNECTMAP_LINKED_METHOD">接入方式</span>：<span>{{detailLists.info.extractionMethod == 0 ? 'ETL数据抽取' : 'AIP接口'}}</span></div>
+                    <div class="attr--row"><span translate="PROJECT_CONNECTMAP_AIU_STORAGE_PATH">AIU存储路径</span>：<span>{{detailLists.info.path}}</span></div>
+                    <div class="remove--btn" ng-click="vm.detailLists.splice($index,1)"><span class="fa fa-times-circle"></span></div>
+                    <span class="org--bot"></span>
                 </div>
             </div>
             <div class="tiptool--show--wrap" ng-show="detailLists.type=='updateTime'">
-                <div>
-                    <div><span>接入时间:</span><span>1234</span></div>
-                    <div><span>最新更新时间:</span><span>532523523</span></div>
-                    <div ng-click="vm.detailLists.splice($index,1)">关闭</div>
+                <div class="tiptool--show--data--table">
+                    <div class="attr--row"><span translate="PROJECT_CONNECTMAP_LINKED_TIME">接入时间</span>：<span>{{detailLists.info.createDate |  date:'yyyy.MM.dd'}}</span></div>
+                    <div class="attr--row"><span translate="PROJECT_CONNECTMAP_LATEST_UPDATE_TIME">最新更新时间</span>：<span>{{detailLists.info.latestUpdateDate |  date:'yyyy.MM.dd'}}</span></div>
+                    <div class="remove--btn" ng-click="vm.detailLists.splice($index,1)"><span class="fa fa-times-circle"></span></div>
+                    <span class="org--bot"></span>
                 </div>
             </div>
             <div class="tiptool--show--wrap" ng-show="detailLists.type=='recordNum'">
-                <div>
-                    <div><span>归档记录总数:</span><span>1234</span></div>
-                    <div><span>本月归档记录数:</span><span>423532</span></div>
-                    <div><span>数据总量:</span><span>32425</span></div>
-                    <div ng-click="vm.detailLists.splice($index,1)">关闭</div>
+                <div class="tiptool--show--data--table">
+                    <div class="attr--row"><span translate="PROJECT_CONNECTMAP_ARCHIVED_RECORD_QUANTITY">归档记录数量</span>：<span>{{detailLists.info.recordCount}}</span></div>
+                    <div class="attr--row"><span translate="PROJECT_CONNECTMAP_MONTHLY_ARCHIVE_NUMBER_OF_RECORDS">本月归档记录数</span>：<span>{{detailLists.info.recordMonthCount}}</span></div>
+                    <div class="attr--row"><span translate="MODULES_DATABASE_TOTAL_DATA_CAPACITY">数据总量</span>：<span>{{detailLists.info.recordCapacity | formatByte}}</span></div>
+                    <div class="remove--btn" ng-click="vm.detailLists.splice($index,1)"><span class="fa fa-times-circle"></span></div>
+                    <span class="org--bot"></span>
                 </div>
             </div>
         </div>
