--- a/app/modules/projectManage/projectEdit/moduleTemplate/moduleTemplate.html
+++ b/app/modules/projectManage/projectEdit/moduleTemplate/moduleTemplate.html
@@ -1,23 +1,21 @@
-<div class=" anim-slide-left module--Template--wrap">
+<div class=" anim-slide-left module--Template--wrap data--module--new--prompt--wrap">
     <div ng-show="vm.versionList.length == 0" class="data--module--new--prompt--wrap">
         <div class="data--module--new--prompt--box">
-            <div >
-                <div class="new--prompt--box">
-                    <div class="new--prompt--box__head">
-                        <img src="images/edit--project--manage--modal--new.png" alt=""/>
-                        <span translate="MODULES_PROJECTMANAGE_NEED_TO_CREATE_DATA_TEMPLATE">还需要创建数据模板</span>
-                    </div>
-                    <div class="prompt-content">
-                        您还没有创建数据模板，无法配置显示模版
-                    </div>
+            <div class="new--prompt--box">
+                <div class="new--prompt--box__head">
+                    <img src="images/edit--project--manage--modal--new.png" alt=""/>
+                    <span translate="MODULES_PROJECTMANAGE_NEED_TO_CREATE_DATA_TEMPLATE">还需要创建数据模板</span>
                 </div>
-                <div class="new--prompt__btn--box">
-                    <img src="images/create--rule--template--icon.png" alt=""/>
-                    <h4 class="title--content">该项目还没有定义数据模板</h4>
-                    <md-button class="red--btn"  ng-click="vm.serfToCreateModule()" translate="MODULES_PROJECTMANAGE_IMMEDIATELY_CREATED">
-                        立刻创建
-                    </md-button>
+                <div class="prompt-content" translate="MODULES_PROJECTMANAGE_CANNOT_CONFIGURE_ARCHIVE_POLICY_SHOW_TEMPLATE">
+                    您还没有创建数据模板，无法配置显示模版
                 </div>
+            </div>
+            <div class="new--prompt__btn--box">
+                <img src="images/create--rule--template--icon.png" alt=""/>
+                <h4 class="title--content" translate="MODULES_PROJECTMANAGE_PROJECT_HAS_NOT_YET_DEFINED_TEMPLATE">该项目还没有定义数据模板</h4>
+                <md-button class="red--btn"  ng-click="vm.serfToCreateModule()" translate="MODULES_PROJECTMANAGE_IMMEDIATELY_CREATED">
+                    立刻创建
+                </md-button>
             </div>
         </div>
     </div>
@@ -32,8 +30,11 @@
                         <a class="btn btn-defult drop--group"  data-nodrag ng-click="vm.toggle(this)">
                             <span class="btn--icon" ng-class="{'fa fa-angle-right': collapsed,'fa fa-angle-down': !collapsed}"></span>
                         </a>
-                        {{node.name}}
-                        <ul  >
+                        <span ng-show="!node.isRepeat">{{node.name}}</span>
+                        <span ng-if="node.isRepeat" dnd-draggable="node" dnd-type="'repeatBlock'">
+                            {{node.name}}
+                        </span>
+                        <ul  ng-show="!node.isRepeat">
                             <li ng-repeat="item in node.attributes"
                                 ng-class="{hidden: collapsed}"
                                 dnd-draggable="item"
@@ -132,9 +133,9 @@
                                             dnd-moved="list.data.splice($index, 1)"
                                             dnd-effect-allowed="move"
                                             class="single--configure--info"
-                                            ng-class="{'selected': models.selected === item,'file':item.attrType=='file','item':item.attrType!='file'}"
+                                            ng-class="{'selected': models.selected === item,'file':item.attrType=='file' || item.attrType=='repeatBlock','item':item.attrType=='metadata'}"
                                         >
-                                            {{item.attrType != 'file' ? 'metedata'  : 'file' }}：
+                                            {{item.attrType != 'file' ? 'metadata'  : 'file' }}：
                                             <span ng-show="vm.language != 'en'">{{item.attrNameZh}}</span>
                                             <span ng-show="vm.language == 'en'">{{item.attrNameEn}}</span>
                                             <span class="glyphicon glyphicon-remove single--configure--info__remove" ng-click="list.data.splice($index,1);vm.deleteItem(item,models.templates)"></span>
